adding all the data entities with apis for discovery
